--- a/passiveinfra_app/templates/passiveinfra_app/passiveinfra_app_form.html
+++ b/passiveinfra_app/templates/passiveinfra_app/passiveinfra_app_form.html
@@ -1,14 +1,31 @@
-{%extends "passiveinfra_app/outerlayout.html"%}
+<!DOCTYPE html>
+{% extends 'passiveinfra_app/outerlayout.html' %}
+{% load bootstrap4 %}
+{% bootstrap_css %}
+{% bootstrap_javascript jquery='full' %}
+{{ form.media }}
 
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
+
+</head>
 {%block content%}
-
-    <h1><font size="4">Passive Sites Correspondence  </font></h1>
+        <div class="container" >
+            <div class="col-md-6">
         <form  method="post" enctype="multipart/form-data" >
             {% csrf_token %}
-            {{ form.as_p }}
+            {%  bootstrap_form form %}
+            {% buttons %}
             <input type="submit" value="Save">
-
+             {% endbuttons %}
         </form>
 
-{%endblock%}
-
+{%endblock %}
+            </div>
+        </div>
+    </html>
